--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "async-iter-read",
 	"version": "2.0.3",
 	"description": "Read from async iterators",
-	"main": "index.js",
+	"main": "async-iter-read.js",
 	"scripts": {
 		"test": "node -r esm .test"
 	},
@@ -13,7 +13,7 @@
 	"keywords": [],
 	"author": "jauntywunderkind",
 	"license": "MIT",
-	"module": "async-iter-fixture.js",
+	"module": "async-iter-read.js",
 	"esm": true,
 	"devDependencies": {
 		"esm": "^3.2.22",
